# gpytorch-mogp

./: LICENSE  README.md  pyproject.toml
examples/: comparison_with_rapid_models.ipynb  multioutput_gp_regression.py
src/gpytorch_mogp/: __init__.py  multioutput_gaussian_likelihood.py  multioutput_noise_models.py
src/gpytorch_mogp/kernels/: __init__.py  multioutput_kernel.py
src/gpytorch_mogp/likelihoods/: __init__.py  multioutput_gaussian_likelihood.py  noise_models.py
src/gpytorch_mogp/utils/: __init__.py  blocks.py  covariance.py
